# ai-workshop

./: .gitignore  README.md  docker-compose.yml
chat-service/: Dockerfile  README.md  entrypoint.sh  requirements.txt  test.db
chat-service/alembic/: env.py
chat-service/alembic/versions/: 63b3262f25a3_initial_migration.py  d25aa924f750_add_prompt_name.py
chat-service/api/: __init__.py  schemas.py  views.py
chat-service/app/agent/: feedback_agent.py
chat-service/app/utils/: model.py  prompts.py
chat-service/database/: __init__.py  database.py  models.py
frontend/: Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: comparison_1741960956.xml  comparison_1741961778.xml  comparison_1741963723.xml  score.musicxml
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: ChatInput.css  ChatInput.jsx  ChatMessages.jsx  Chatbot.jsx  Sheets.jsx  mock.js
ml-service/: Dockerfile  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  start.sh
ml-service/api/: logger.py  schemas.py  views.py
ml-service/core/: music_submission.py
ml-service/core/pitch/__base/: __init__.py  pitcher.py
ml-service/core/pitch/basic_pitcher/: __init__.py  pitcher.py  preprocessor_dynamicnr.py
ml-service/core/preprocessing/: prepro_Mulham_liked.py  preprocessor.py  preprocessor_dynamicnr.py  preprocessoredit.py
ml-service/core/sheet_music/: generator.py
ml-service/data/: violin.xml  xmls.musicxml
ml-service/data/2/: base.mid
ml-service/data/scores/: base.midi
